--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1> My Best Friends Photo App</h1>
     <main>
-    <h2>My Friends Photos</h2>
-    <p>Click here to view my beautiful friends photos. <!--TODO: Add link to friends' photos--></p>
+      <h2>My Friends Photos</h2>
+      <p>Click here to view my beautiful friends photos. <!--TODO: Add link to friends' photos--></p>
+      <a href="https://freecatphotoapp.com">Friends Photos</a>
+      <img src="C:\Users\OKO-OSE\Desktop\ONO\RESPONSIVE WEB DEV\FREE CODE CAMP PRACTICE\Friends App\Maduabuchi.jpg" alt="Maduabuchi">
     </main>
 </body>
 </html>
