--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>My Friends Photos</h2>
       <p>Click here to view my beautiful friends photos. <!--TODO: Add link to friends' photos--></p>
       <a href="https://freecatphotoapp.com">Friends Photos</a>
-      <img src="C:\Users\OKO-OSE\Desktop\ONO\RESPONSIVE WEB DEV\FREE CODE CAMP PRACTICE\Friends App\Maduabuchi.jpg" alt="Maduabuchi">
+      <img src="https://res.cloudinary.com/onose/image/upload/v1653002325/vqa6bm1hi3ui76s3ojhu.jpg" alt="Maduabuchi">
     </main>
 </body>
 </html>
